force-app/main/default/objects/DER_Application__c/fields/Under_Freq_Protection__c.field-meta.xml
<CustomField>
    <fullName>Under_Freq_Protection__c</fullName>
    <description>Under frequency protection in Hz
Permitted range is between 45 and 50 (inclusive)</description>
    <label>Under-Frequency Protection (F&lt;)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>