force-app/main/default/objects/DER_Application__c/fields/Undervolt_Protection__c.field-meta.xml
<CustomField>
    <fullName>Undervolt_Protection__c</fullName>
    <description>Protective function limit</description>
    <label>Undervoltage Protection (V&lt;)</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>