force-app/main/default/objects/DER_Application__c/fields/Undervolt_Protection_Delay__c.field-meta.xml
<CustomField>
    <fullName>Undervolt_Protection_Delay__c</fullName>
    <description>Trip delay time. Time (s)</description>
    <label>Undervoltage Protection Delay (V&lt;)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>