force-app/main/default/objects/DER_Application__c/fields/Volt_Rise_Max_PV_Output__c.field-meta.xml
<CustomField>
    <fullName>Volt_Rise_Max_PV_Output__c</fullName>
    <label>Voltage Rise at Max PV Output %</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>