force-app/main/default/objects/DER_Application__c/fields/Wireless_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Wireless_Manufacturer__c</fullName>
    <label>Wireless Manufacturer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>