force-app/main/default/objects/DER_Application__c/fields/Witness_Test__c.field-meta.xml
<CustomField>
    <fullName>Witness_Test__c</fullName>
    <label>Witness Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>