force-app/main/default/objects/DER_Application__c/validationRules/Power_Factor_with_Gen.validationRule-meta.xml
<ValidationRule>
    <fullName>Power_Factor_with_Gen</fullName>
    <active>true</active>
    <description>Power Factor with Generation must be in the range of 0.80 - 1.00 (inclusive)</description>
    <errorConditionFormula>AND(Total_System_Capacity__c&gt;30,OR(
Power_Factor__c &lt; 0.80,
Power_Factor__c &gt; 1.00
))</errorConditionFormula>
    <errorDisplayField>Power_Factor__c</errorDisplayField>
    <errorMessage>Power Factor with Generation is outside the permitted range of 0.80 - 1.00 (inclusive)</errorMessage>
</ValidationRule>