force-app/main/default/objects/DER_Application__c/validationRules/Under_Freq_Protection.validationRule-meta.xml
<ValidationRule>
    <fullName>Under_Freq_Protection</fullName>
    <active>true</active>
    <description>Under-Frequency Protection (F&lt;) must be in the range of 45 - 50 (inclusive)</description>
    <errorConditionFormula>OR(
Under_Freq_Protection__c &lt; 45,
Under_Freq_Protection__c &gt;50
)</errorConditionFormula>
    <errorDisplayField>Under_Freq_Protection__c</errorDisplayField>
    <errorMessage>Under-Frequency Protection (F&lt;) is outside the permitted range of 45 - 50 (inclusive)</errorMessage>
</ValidationRule>