force-app/main/default/objects/DER_Application__c/validationRules/Voltage_Rise_at_Max_PV_Output.validationRule-meta.xml
<ValidationRule>
    <fullName>Voltage_Rise_at_Max_PV_Output</fullName>
    <active>true</active>
    <description>Voltage Rise at Max PV Output % must be in the range of 0.10% - 2.00% (inclusive)</description>
    <errorConditionFormula>AND(Total_System_Capacity__c&gt;30,OR(
Volt_Rise_Max_PV_Output__c &lt; 0.0010,
Volt_Rise_Max_PV_Output__c &gt; 0.0200
))</errorConditionFormula>
    <errorDisplayField>Volt_Rise_Max_PV_Output__c</errorDisplayField>
    <errorMessage>Voltage Rise at Max PV Output % is outside the permitted range of 0.10% - 2.00% (inclusive)</errorMessage>
</ValidationRule>